--- a/cadastro.html
+++ b/cadastro.html
@@ -5,16 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Usuário - Cyber Cash</title>
     <link rel="stylesheet" href="css/style.css"> <!-- Importando o arquivo de estilo -->
+<link rel="stylesheet" href="imagem/Infinity_Banking__7_-removebg-preview.png">
 </head>
 <body>
 <header>
     <h1>Crie sua conta</h1>
-    <section>
-        <p>
-            Olá, vamos dar início à criação da sua nova conta.
-            Para isso, é necessário preencher o formulário com as informações requeridas.
-        </p>
-    </section>
+    <details>
+        <summary>Menu</summary>
+                            <menu>
+                                <a href="index.html">Início</a>
+                                                    <a href="#">Configurações</a>
+                                                    <a href="ajuda.html">Ajuda</a>
+                                                    <a href="painel.html">Usuário</a>
+                                                    <a href="">Sair</a>
+                            </menu>
+                </details>
+    <a href="#"><img src="imagem/Infinity_Banking__7_-removebg-preview.png" alt="">Logo da Empresa</a>
     <form action="" method="post" autocomplete="on">
         <div>
             <label for="Buscar">Buscar:</label>
@@ -23,22 +29,31 @@
         <input type="reset" value="Limpar">
         <input type="submit" value="Pesquisar">
     </form>
-    <nav>
-        <menu>
-            <a href="index.html" title="Página inicial">Início</a>
-            <a href="explorar.html" title="Navegue pela plataforma">Explorar</a>
-            <a href="painel.html" title="Altere, troque, remova e muito mais">Painel do usuário</a>
-            <a href="pagamentos.html" title="Faça ou receba pagamentos">Pagamentos</a>
-            <a href="saldos.html" title="Confira seu saldo">Saldos</a>
-            <a href="transferencias.html" title="Realize suas transferências">Transferências</a>
-            <a href="deposito.html" title="Realize depósitos para sua conta">Depósitos</a>
-            <a href="info.html" title="Saiba mais sobre as informações do projeto">Informações</a>
-            <a href="desenvolvedores.html" title="Obtenha informações sobre nossa equipe">Desenvolvedores</a>
-            <a href="ajuda.html" title="Obtenha a ajuda necessária para você">Suporte ao usuário</a>
-            <a href="#" title="Mais opções">Mais...</a>
-        </menu>
-    </nav>
 </header>    
+    <main>
+        <section>
+            <p>
+                Olá, vamos dar início à criação da sua nova conta.
+                Para isso, é necessário preencher o formulário com as informações requeridas.
+            </p>
+        </section>
+        
+        <nav>
+            <menu>
+                <a href="index.html" title="Página inicial">Início</a>
+                <a href="explorar.html" title="Navegue pela plataforma">Explorar</a>
+                <a href="painel.html" title="Altere, troque, remova e muito mais">Painel do usuário</a>
+                <a href="pagamentos.html" title="Faça ou receba pagamentos">Pagamentos</a>
+                <a href="saldos.html" title="Confira seu saldo">Saldos</a>
+                <a href="transferencias.html" title="Realize suas transferências">Transferências</a>
+                <a href="deposito.html" title="Realize depósitos para sua conta">Depósitos</a>
+                <a href="info.html" title="Saiba mais sobre as informações do projeto">Informações</a>
+                <a href="desenvolvedores.html" title="Obtenha informações sobre nossa equipe">Desenvolvedores</a>
+                <a href="ajuda.html" title="Obtenha a ajuda necessária para você">Suporte ao usuário</a>
+                <a href="#" title="Mais opções">Mais...</a>
+            </menu>
+        </nav>
+    </main>
 <h3>Iniciar o seu cadastro</h3>
 
 <form action="" method="post" autocomplete="on">
