--- a/index.html
+++ b/index.html
@@ -10,8 +10,18 @@
 <body>
 <header>
     <h1>Bem-vindo à sua plataforma de finanças</h1>
-<a href="#"><img src="imagem/Infinity_Banking__7_-removebg-preview.png" alt="">Logo da Empresa</a>
-    <form action="" method="post" autocomplete="on">
+    <details>
+        <summary>Menu</summary>
+                            <menu>
+                                <a href="index.html">Início</a>
+                                                    <a href="#">Configurações</a>
+                                                    <a href="ajuda.html">Ajuda</a>
+                                                    <a href="painel.html">Usuário</a>
+                                                    <a href="">Sair</a>
+                            </menu>
+                </details>
+    <a href="#"><img src="imagem/Infinity_Banking__7_-removebg-preview.png" alt="">Logo da Empresa</a>
+        <form action="" method="post" autocomplete="on">
         <div>
             <label for="Buscar">Buscar:</label>
             <input type="search" name="Buscar" id="Buscar" required autocomplete="on" placeholder="Digite o termo da sua pesquisa." minlength="8" maxlength="2000">
@@ -20,7 +30,7 @@
         <input type="submit" value="Pesquisar">
     </form>    
     <a href="login.html" target="_blank" title="Entre para ter acesso aos nossos serviços e recursos">Faça login</a>
-</header>
+    </header>
 
 <main>
     <section>
@@ -59,8 +69,10 @@
 
 <details>
     <summary>
-        <h3>Você no comando</h3>
-    </summary>
+Controle do usuário        
+</summary>
+            
+<h3>Você no comando</h3>
     <main>
         <p>
             Você está no controle:
@@ -72,9 +84,9 @@
 
 <details>
     <summary>
+Funcionalidades        
+</summary>
         <h3>Recursos, Ferramentas e mais</h3>
-    </summary>
-    
     <main>
         <p>
             Disponibilizamos múltiplas funcionalidades para nossos colaboradores e cooperadores! Com nosso sistema, você, como usuário de nossos recursos, tem acesso liberado a:
@@ -97,11 +109,11 @@
         </p>
     </main>
 </details>
-
 <details>
     <summary>
-        <h3>Explorando as Inovações: Aprimoramentos e Opções Disponíveis</h3>
-    </summary>
+Inovações e serviços        
+</summary>
+            <h3>Explorando as Inovações: Aprimoramentos e Opções Disponíveis</h3>
     <main>
         <p>
             Convidamos você a manter-se informado sobre as últimas atualizações e inovações em nossos recursos e funcionalidades. Nosso objetivo é promover continuamente a excelência em nossa plataforma.
@@ -113,8 +125,9 @@
 
 <details>
     <summary>
-        <h3>Descubra as Novidades: Aprimoramentos e Modalidades</h3>
-    </summary>
+Novidades        
+</summary>
+            <h3>Descubra as Novidades: Aprimoramentos e Modalidades</h3>
     <main>
         <p>
             Convidamos você a explorar nossa <a href="novidades.html">página de atualizações e novidades</a>. Aqui, você encontrará informações relevantes sobre as modalidades oferecidas e as funcionalidades que aprimoramos ao longo do tempo.
@@ -123,11 +136,11 @@
         </p>
     </main>
 </details>
-
 <details>
     <summary>
-        <h3>Garantindo a Segurança e Privacidade dos Seus Dados</h3>
-    </summary>
+Segurança e privacidade        
+</summary>
+            <h3>Garantindo a Segurança e Privacidade dos Seus Dados</h3>
     <main>
         <p>
             Prezado usuário,
@@ -140,8 +153,9 @@
 
 <details>
     <summary>
-        <h3>Explorando Nossa Plataforma: Informações e Usabilidade</h3>
-    </summary>
+Detalhes        
+</summary>
+    <h3>Explorando Nossa Plataforma: Informações e Usabilidade</h3>
     <main>
         <p>
             Visite nossa <a href="#">página de informações sobre o projeto</a>. Lá, você encontrará detalhes relevantes sobre nossa plataforma, bem como insights sobre a melhor usabilidade que oferecemos aos nossos usuários.
