--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Entre ou Cadastre-se - Cyber Cash</title>
     <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="imagem/Infinity_Banking__7_-removebg-preview.png">
 </head>
 <body>
     <header>
@@ -12,6 +13,17 @@
         <main>
             <p>Preencha os campos abaixo com as informações necessárias.</p>
         </main>
+        <details>
+            <summary>Menu</summary>
+                                <menu>
+                                    <a href="index.html">Início</a>
+                                                        <a href="#">Configurações</a>
+                                                        <a href="ajuda.html">Ajuda</a>
+                                                        <a href="painel.html">Usuário</a>
+                                                        <a href="">Sair</a>
+                                </menu>
+                    </details>
+                    <a href="#"><img src="imagem/Infinity_Banking__7_-removebg-preview.png" alt="">Logo da Empresa</a>        
         <form action="" method="post" autocomplete="on">
             <div>
                 <label for="Buscar">Buscar</label>
