--- a/index.html
+++ b/index.html
@@ -56,39 +56,29 @@
             <a href="#">Mais...</a>
         </menu>
     </nav>
-</main>
-
 <h2>Segurança e Privacidade: Um Compromisso Inabalável</h2>
-
-<main>
-    <p>
+<p>
         Mantenha suas contas, finanças e dados pessoais protegidos. Nossas modalidades são regularmente atualizadas para oferecer a melhor experiência e praticidade possível.
         Estamos comprometidos em garantir que sua navegação em nossa plataforma seja livre de contratempos que possam comprometer a segurança e o manuseio adequado de suas informações. Utilizamos criptografia avançada para proteger seus dados durante a navegação.
     </p>
-</main>
-
 <details>
     <summary>
 Controle do usuário        
 </summary>
-            
-<h3>Você no comando</h3>
-    <main>
+            <h3>Você no comando</h3>
         <p>
             Você está no controle:
             Tenha em mãos o total controle de suas ações e serviços, independentemente de onde você esteja. Administre seus dados, senhas, transferências, saldos e visibilidade. Oferecemos uma variedade de recursos para facilitar o gerenciamento de suas informações pessoais.
             Nossas representações recreativas no site proporcionam inúmeros serviços, com funcionalidades cuidadosamente projetadas para preservar a integridade de seus dados. Sua satisfação é fundamental para nosso desenvolvimento e compatibilidade com todos os cooperados.
         </p>
-    </main>
-</details>
+    </details>
 
 <details>
     <summary>
 Funcionalidades        
 </summary>
         <h3>Recursos, Ferramentas e mais</h3>
-    <main>
-        <p>
+    <p>
             Disponibilizamos múltiplas funcionalidades para nossos colaboradores e cooperadores! Com nosso sistema, você, como usuário de nossos recursos, tem acesso liberado a:
             <ol>
                 <li>Contas Bancárias: Gerencie suas contas com eficiência e segurança.</li>
@@ -107,67 +97,55 @@ Funcionalidades
                 <li>Diagnóstico da Conta: Analise o desempenho de sua conta para tomar decisões informadas.</li>
             </ol>
         </p>
-    </main>
 </details>
 <details>
     <summary>
 Inovações e serviços        
 </summary>
             <h3>Explorando as Inovações: Aprimoramentos e Opções Disponíveis</h3>
-    <main>
         <p>
             Convidamos você a manter-se informado sobre as últimas atualizações e inovações em nossos recursos e funcionalidades. Nosso objetivo é promover continuamente a excelência em nossa plataforma.
             Nossa equipe trabalha incansavelmente para administrar quaisquer imprevistos que possam afetar a usabilidade e praticidade dos nossos usuários. A segurança e privacidade de cada um de vocês são os princípios norteadores de todas as nossas melhorias e avanços.
             Portanto, não deixe de acompanhar nossas atualizações regularmente. Estamos comprometidos em proporcionar a você a melhor experiência possível.
         </p>
-    </main>
-</details>
-
+    </details>
 <details>
     <summary>
 Novidades        
 </summary>
             <h3>Descubra as Novidades: Aprimoramentos e Modalidades</h3>
-    <main>
-        <p>
+    <p>
             Convidamos você a explorar nossa <a href="novidades.html">página de atualizações e novidades</a>. Aqui, você encontrará informações relevantes sobre as modalidades oferecidas e as funcionalidades que aprimoramos ao longo do tempo.
             Nossa equipe tem se dedicado incansavelmente para garantir melhorias significativas em termos de estabilidade e experiência de navegação. A satisfação dos nossos usuários é nossa prioridade máxima.
             Portanto, não deixe de visitar nossa página regularmente e manter-se informado sobre as últimas novidades. Estamos comprometidos em proporcionar a você a melhor experiência possível.
         </p>
-    </main>
-</details>
+    </details>
 <details>
     <summary>
 Segurança e privacidade        
 </summary>
             <h3>Garantindo a Segurança e Privacidade dos Seus Dados</h3>
-    <main>
-        <p>
+    <p>
             Prezado usuário,
             É com grande zelo que o convidamos a obter informações detalhadas sobre a proteção e privacidade de suas informações em nossa plataforma. Acesse a página dedicada à segurança e privacidade para compreender as modalidades de segurança aplicáveis aos nossos serviços.
             Nossa equipe trabalha incansavelmente para assegurar que seus dados estejam resguardados e que sua experiência seja confiável e livre de riscos. A privacidade de cada usuário é um princípio fundamental em todas as nossas ações.
             Portanto, não deixe de visitar a página de segurança e privacidade regularmente. Estamos comprometidos em proporcionar a você a melhor experiência possível, com total transparência e responsabilidade.
         </p>
-    </main>
-</details>
-
+    </details>
 <details>
     <summary>
 Detalhes        
 </summary>
     <h3>Explorando Nossa Plataforma: Informações e Usabilidade</h3>
-    <main>
         <p>
-            Visite nossa <a href="#">página de informações sobre o projeto</a>. Lá, você encontrará detalhes relevantes sobre nossa plataforma, bem como insights sobre a melhor usabilidade que oferecemos aos nossos usuários.
+            Visite nossa <a href="info.html" target="_blank">página de informações sobre o projeto</a>. Lá, você encontrará detalhes relevantes sobre nossa plataforma, bem como insights sobre a melhor usabilidade que oferecemos aos nossos usuários.
             Nossa equipe trabalha incansavelmente para garantir que cada aspecto da experiência do usuário seja otimizado. A usabilidade intuitiva e eficiente é um dos pilares fundamentais em nosso projeto.
             Portanto, não deixe de explorar essa fonte de conhecimento. Estamos comprometidos em proporcionar a você a melhor experiência possível em nossos serviços e ferramentas.
         </p>
-    </main>
-</details>
+    </details>
 
 <h3>Passando por algum problema</h3>
-<main>
-    <p>
+<p>
         Se porventura enfrentar alguma dificuldade ou se deparar com qualquer inconveniente relacionado às ferramentas integradas aos recursos desta plataforma, convido-o a compartilhar suas inquietações conosco. Seja um problema, um erro, uma sugestão ou uma crítica, estamos à disposição para ouvi-lo e prestar o devido auxílio.
         Nossa equipe de assessoria está pronta para atendê-lo com a máxima diligência e competência. Não hesite em entrar em contato conosco. Acesse a <a href="ajuda.html">página de ajuda</a>, onde encontrará informações detalhadas e respostas pertinentes ao seu relato.
         Agradecemos por sua confiança e permanecemos à disposição para servi-lo com o compromisso e a seriedade que merece.
@@ -184,7 +162,7 @@ Detalhes
             <a href="info.html">Informações gerais</a>
             <a href="#">Diagnósticos</a>
             <a href="#">Carreiras</a>
-            <a href="#">Acessibilidade</a>
+            <a href="acessibi lit.html">Acessibilidade</a>
             <a href="ajuda.html">Ajuda e suporte</a>
             <a href="#">Colaboradores</a>
         </menu>
